# reposcore

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: flake8.yaml  main.yml  reposcore  reposcore.yml
etc/: reposcore.conf
reposcore/: cli.py  projects.txt  reposcore.py
reposcore/repo/: repo.py  token.py
reposcore/stat/: stat.py
reposcore/utils/: git_utils.py  matrix.py
test/: ci-test.txt
web/: app.py  score.html  score.json  source.json
web/static/: style.css
web/templates/: index.html
