[metadata]
name = reposcore
summary = Gives scores for open source projects
description-file =
    README.md
long_description_content_type = text/markdown
author = Repo Score Author
home-page = https://github.com/kunpengcompute/reposcore
python-requires = >=3.6
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    reposcore = reposcore.cli:main

[wheel]
universal = 1
